--- a/app.json
+++ b/app.json
@@ -1,18 +1,18 @@
 {
-  "name": "Frozen Tagger Bot",
-  "logo":"https://telegra.ph/file/133b9125da464d1db6fca.jpg",
-  "description": "Frozen Tagger ÜCRETSİZ ŞEKILDE GRUBUNUZDA ÜYELERI ETIKETLEYE BILIR.",
+  "name": "Lounge Tagger Bot",
+  "logo":"https://telegra.ph/file/dfa517fd00b6aca5f7ac9.jpg",
+  "description": "Lounge tagger bot sıze ucretsız uyelerınızı etıketleyen bı bottur.",
   "env": {
     "TOKEN": {
-      "description": "@botfather Vasitesi ile Ala Bilersen(Gerekli)",
+      "description": "bot token girin.",
       "value": ""
     },
     "APP_ID": {
-      "description": " my.telegram.org vasitesi ile ala bilersen (Gerekli)",
+      "description": "@otomytelegrambot dan api hash api id alınız.",
       "value": ""
     },
     "API_HASH": {
-      "description": "my.telegram.org Vasitesi ile ala bilersen (Gerekli)",
+      "description": "@otomytelegrambot dan api hash api id alınız.",
       "value": ""
     }
   },
